# prymate

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  run_tests.bat  run_tests.sh
.github/workflows/: python-app.yml
examples/: README.md  faster_fib.mon  recursive_fib.mon
prymate/: __init__.py
prymate/ast/: __init__.py  ast.py
prymate/console/: __init__.py  run.py
prymate/evaluator/: __init__.py  builtins.py  evaluator.py
prymate/lexer/: __init__.py  lexer.py
prymate/objects/: __init__.py  builtins.py  environment.py  objects.py
prymate/parser/: parser.py
prymate/repl/: __init__.py  repl.py
prymate/token/: __init__.py  token.py
tests/: ast_test.py  evaluator_test.py  lexer_test.py  objects_test.py  parser_test.py
